# dwgDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/booway/dwgdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidAppServices.cpp  AndroidAppServices.h  native-lib.cpp
app/src/main/cpp/include/: glues.h
app/src/main/java/com/booway/dwgdemo/: BoowayDwgJni.java  BoowayDwgView.java  MainActivity.java  TestActivity.java
app/src/main/java/com/booway/testSharpes/: Line.java
app/src/main/java/com/booway/utils/: CalUtils.java  OpenGLUtils.java  SDcardFileUtils.java  VaryTools.java
app/src/main/jni/boost/numeric/ublas/: io.hpp  matrix.hpp  vector_expression.hpp
app/src/main/jni/debug/: rs_debug.cpp
app/src/main/jni/engine/: lc_rect.cpp  rs_arc.cpp  rs_arc.h  rs_atomicentity.cpp  rs_block.cpp  rs_blocklist.cpp  rs_blocklist.h  rs_constructionline.cpp  rs_database.cpp  rs_database.h  rs_document.cpp  rs_document.h  rs_entity.cpp  rs_entity.h  rs_entitycontainer.cpp  rs_entitycontainer.h  rs_flags.cpp  rs_flags.h  rs_font.cpp  rs_font.h  rs_graphic.cpp  rs_graphic.h  rs_layer.cpp  rs_layer.h  rs_layerlist.cpp  rs_layerlist.h  rs_line.cpp  rs_line.h  rs_mtext.cpp  rs_pen.h  rs_polyline.cpp  rs_polyline.h  rs_settings.cpp  rs_settings.h  rs_units.cpp  rs_variable.h  rs_variabledict.cpp  rs_variabledict.h  rs_vector.cpp
app/src/main/jni/filters/: rs_filterdxfrw.cpp  rs_filterdxfrw.h  rs_filterinterface.h
app/src/main/jni/libdxfrw/: drw_classes.h  libdwgr.cpp
app/src/main/jni/libdxfrw/intern/: dwgreader.cpp  dwgreader.h
app/src/main/jni/math/: lc_quadratic.cpp  lc_quadratic.h  rs_math.cpp  rs_math.h
app/src/main/res/layout/: activity_main.xml  activity_test.xml  item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/booway/dwgdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
